--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,12 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// Swagger
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	implementation 'io.springfox:springfox-bean-validators:2.9.2'
 
+	// Spring Data
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2:1.4.197'
 	implementation 'org.flywaydb:flyway-maven-plugin:4.0.3'
