--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:~/fiapcervejaria;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:c:/fiapcervejaria;DB_CLOSE_ON_EXIT=FALSE
     username: fiap
     password: fiap
   jpa:
